--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,7 @@
     "dev" : "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Shobhit",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
